Add covariance of beta_hat. Cross-check the result with statsmodels

--- a/linear_algebra/linear regression and linear algebra, with gauss jordan elimination.ipynb
+++ b/linear_algebra/linear regression and linear algebra, with gauss jordan elimination.ipynb
@@ -64,6 +64,9 @@
     "    def is_square(self):\n",
     "        return self.shape[0] == self.shape[1]\n",
     "\n",
+    "    def copy(self):\n",
+    "        return Matrix(copy.deepcopy(self.data))\n",
+    "\n",
     "    def __len__(self):\n",
     "        return self.n\n",
     "\n",
@@ -74,8 +77,38 @@
     "    def __getitem__(self, item):\n",
     "        return self.data[item]\n",
     "\n",
-    "    def copy(self):\n",
-    "        return Matrix(copy.deepcopy(self.data))\n",
+    "    def __add__(self, other):\n",
+    "        result = Matrix.zeros(self.shape)\n",
+    "        for j, k in itertools.product(range(result.shape[0]), range(result.shape[1])):\n",
+    "            try:\n",
+    "                assert self.shape == other.shape\n",
+    "                result[j][k] = self[j][k] + other[j][k]\n",
+    "            except AttributeError:\n",
+    "                result[j][k] = self[j][k] + other\n",
+    "        return result\n",
+    "\n",
+    "    def __sub__(self, other):\n",
+    "        result = Matrix.zeros(self.shape)\n",
+    "        for j, k in itertools.product(range(result.shape[0]), range(result.shape[1])):\n",
+    "            try:\n",
+    "                assert self.shape == other.shape\n",
+    "                result[j][k] = self[j][k] - other[j][k]\n",
+    "            except AttributeError:\n",
+    "                result[j][k] = self[j][k] - other\n",
+    "        return result\n",
+    "\n",
+    "    def __mul__(self, other):\n",
+    "        result = self.copy()\n",
+    "        for j, k in itertools.product(range(result.shape[0]), range(result.shape[1])):\n",
+    "            try:\n",
+    "                assert self.shape == other.shape\n",
+    "                result[j][k] *= other[j][k]\n",
+    "            except AttributeError:\n",
+    "                result[j][k] *= other\n",
+    "        return result\n",
+    "    \n",
+    "    def __matmul__(self, other):\n",
+    "        return self.multiply_by(other)\n",
     "\n",
     "    def add(self, other):\n",
     "        assert self.shape == other.shape\n",
@@ -1096,12 +1129,277 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear regression"
+    "# nice syntax"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X = Matrix([\n",
+      "    [3.0, 1.0],\n",
+      "    [4.0, 2.0]\n",
+      "])\n",
+      "X_inv = Matrix([\n",
+      "    [1.0, -0.5],\n",
+      "    [-2.0, 1.5]\n",
+      "])\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = Matrix([\n",
+    "    [3, 1],\n",
+    "    [4, 2]\n",
+    "])\n",
+    "X_inv = X.invert()\n",
+    "print(\"X =\", X)\n",
+    "print(\"X_inv =\", X_inv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### verify: X_inv is the inverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [1.0, 0.0],\n",
+       "    [0.0, 1.0]\n",
+       "])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_inv.multiply_by(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [1.0, 0.0],\n",
+       "    [0.0, 1.0]\n",
+       "])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.multiply_by(X_inv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### demo cute operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [4.0, 0.5],\n",
+       "    [2.0, 3.5]\n",
+       "])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X + X_inv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [2.0, 1.5],\n",
+       "    [6.0, 0.5]\n",
+       "])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X - X_inv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [3.0, -0.5],\n",
+       "    [-8.0, 3.0]\n",
+       "])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X * X_inv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [1.0, 0.0],\n",
+       "    [0.0, 1.0]\n",
+       "])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X @ X_inv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [1.0, 0.0],\n",
+       "    [0.0, 1.0]\n",
+       "])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_inv @ X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### with another matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix([\n",
+      "    [2.0, 5.0, 0.0],\n",
+      "    [1.0, 0.0, 1.0],\n",
+      "    [1.0, 2.0, 0.0]\n",
+      "])\n",
+      "Matrix([\n",
+      "    [-2.0, 0.0, 5.0],\n",
+      "    [1.0, 0.0, -2.0],\n",
+      "    [2.0, 1.0, -5.0]\n",
+      "])\n",
+      "Matrix([\n",
+      "    [1.0, 0.0, 0.0],\n",
+      "    [0.0, 1.0, 0.0],\n",
+      "    [0.0, 0.0, 1.0]\n",
+      "])\n",
+      "Matrix([\n",
+      "    [1.0, 0.0, 0.0],\n",
+      "    [0.0, 1.0, 0.0],\n",
+      "    [0.0, 0.0, 1.0]\n",
+      "])\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = Matrix([\n",
+    "    [2, 5, 0],\n",
+    "    [1, 0, 1],\n",
+    "    [1, 2, 0],\n",
+    "])\n",
+    "X_inv = X.invert()\n",
+    "\n",
+    "print(X)\n",
+    "print(X_inv)\n",
+    "print(X @ X_inv)\n",
+    "print(X_inv @ X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linear regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1449,7 @@
        "])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1461,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [0.35254691689008044],\n",
+       "    [0.18498659517426275]\n",
+       "])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_hat = (X.transpose() @ X).invert() @ X.transpose() @ y\n",
+    "beta_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1505,7 @@
        "array([[0.35254692, 0.1849866 ]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1539,7 @@
        "        [ 9. ,  0.5]]), (3, 2))"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1562,7 @@
        "        [3.]]), (3, 1))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1621,7 @@
        "  <th>Date:</th>             <td>Wed, 09 Oct 2019</td> <th>  Prob (F-statistic):</th>           <td> 0.153</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>14:58:55</td>     <th>  Log-Likelihood:    </th>          <td>-0.92640</td>\n",
+       "  <th>Time:</th>                 <td>16:54:14</td>     <th>  Log-Likelihood:    </th>          <td>-0.92640</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>     3</td>      <th>  AIC:               </th>          <td>   5.853</td>\n",
@@ -1349,7 +1671,7 @@
        "Model:                            OLS   Adj. R-squared (uncentered):              0.930\n",
        "Method:                 Least Squares   F-statistic:                              20.99\n",
        "Date:                Wed, 09 Oct 2019   Prob (F-statistic):                       0.153\n",
-       "Time:                        14:58:55   Log-Likelihood:                        -0.92640\n",
+       "Time:                        16:54:14   Log-Likelihood:                        -0.92640\n",
        "No. Observations:                   3   AIC:                                      5.853\n",
        "Df Residuals:                       1   BIC:                                      4.050\n",
        "Df Model:                           2                                                  \n",
@@ -1371,7 +1693,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,18 +1703,182 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## covariance of beta_hat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Var(beta_hat) = (X.transpose().multiply_by(X)).inverse().multiply_by(sigma_hat_squared)\n",
+    "sigma_hat_squared = residuals.transpose().multiply_by(residuals)\n",
+    "residuals = y - X.multiply_by(beta_hat)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# (X.transpose().multiply_by(X).invert()) * (y - X.multiply_by(beta_hat)).transpose()\n",
+    "# lol, screw this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [0.7225201072386059],\n",
+       "    [1.5777479892761397],\n",
+       "    [3.2654155495978556]\n",
+       "])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_hat = X @ beta_hat\n",
+    "y_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [0.27747989276139406],\n",
+       "    [0.4222520107238603],\n",
+       "    [-0.2654155495978556]\n",
+       "])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "residual = y - y_hat\n",
+    "residual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [0.32573726541554954]\n",
+       "])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "residual_sum_of_squares = residual.transpose() @ residual\n",
+    "residual_sum_of_squares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cov_beta_hat = (X.transpose() @ X).invert() * residual_sum_of_squares.data[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [0.0030565158953201697, -0.0008732902558057627],\n",
+       "    [-0.0008732902558057627, 0.06229470491414441]\n",
+       "])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov_beta_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05528576575683988"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov_beta_hat[0][0] ** 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24958907210481876"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov_beta_hat[1][1] ** 0.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and these match the results in the `statsmodels` summary"
+   ]
   }
  ],
  "metadata": {
